@@ -11,6 +11,7 @@ end
 --Add pys combustion mixture as special fluid, need conversion recipes for all added temperatures since its created in assemblers
 if mods["pycoalprocessing"] and data.raw.fluid["combustion-mixture1"] then
     omni.fluid.add_assembler_generator_fluid("combustion-mixture1")
+    omni.fluid.add_multi_temp_recipe("cooling-water")
 end
 
 
