@@ -3,6 +3,7 @@ omni.fluid.forbidden_assembler = {} --This one is not used for anything yet. If 
 omni.fluid.forbidden_recipe = {}
 --Generator fluids that are normally created in an assembling machine. If the results temp is higher than any boiler, we need to ignore the boiler temperature(s) to create conversion recipes
 omni.fluid.assembler_generator_fluids = {}
+omni.fluid.multi_temp_recipes = {}
 omni.fluid.excluded_strings = {{"empty","barrel"},{"fill","barrel"},{"fluid","unknown"},"barreling-pump","creative"}
 
 function omni.fluid.excempt_boiler(boiler)
@@ -19,6 +20,10 @@ end
 
 function omni.fluid.add_assembler_generator_fluid(fluidname)
     omni.fluid.assembler_generator_fluids[fluidname] = true
+end
+
+function omni.fluid.add_multi_temp_recipe(recipename)
+    omni.fluid.multi_temp_recipes[recipename] = true
 end
 
 function omni.fluid.check_string_excluded(comparison) --checks fluid/recipe name against exclusion list
@@ -118,4 +123,42 @@ function omni.fluid.is_fluid_void(recipe)
         return true
     end
     return false
+end
+
+function omni.fluid.create_temperature_copies(recipe, fluidname, replacement, temperatures)
+    --Additional recipe checks: If this is a fixed recipe somewhere, we need to remove that, enable the recipe and unhide if required
+    for _, ent in pairs(data.raw["assembling-machine"]) do
+        if ent.fixed_recipe and ent.fixed_recipe == recipe.name then
+            ent.fixed_recipe = nil
+            omni.lib.enable_recipe(recipe.name)
+            if recipe.normal then
+                recipe.normal.hidden = false
+                recipe.expensive.hidden = false
+            end
+            if recipe.hidden then recipe.hidden = false end
+        end
+    end
+    --Create copies for each temp in temperatures and replace the sluid with the required temp sluid
+    local copies = {}
+    for _, temp in pairs(temperatures) do
+        local sluid = "solid-"..fluidname.."-T-"..temp
+        if type(temp) ~= "number" then sluid = "solid-"..fluidname end
+        if data.raw.item[sluid] and sluid ~= replacement then
+            local newrec = table.deepcopy(recipe)
+            newrec.name = newrec.name .."-T-"..temp
+            newrec.localised_name = omni.lib.locale.of(recipe).name
+            for _, dif in pairs({"normal","expensive"}) do
+                for _, ingres in pairs({"ingredients","results"}) do
+                    for _, flu in pairs(newrec[dif][ingres]) do
+                        if flu.name and flu.name == replacement then
+                            flu.name = sluid
+                            break
+                        end
+                    end
+                end
+            end
+            copies[#copies+1] = newrec
+        end
+    end
+    if next(copies) then data:extend(copies) end
 end
